add call to move

--- a/src/app/documents/documents.move.component.html
+++ b/src/app/documents/documents.move.component.html
@@ -42,7 +42,7 @@
           <tr>
             <td>
                 <div class="input-field col s12">
-                  <input type="text" name="directoryTo" id="directoryTo" [(ngModel)]="directoryTo">
+                  <input type="text" name="directoryTo" id="directoryTo" [(ngModel)]="documentMove.directoryTo">
                   <label for="directoryTo">
                     Move to:
                   </label>
