finish move files

--- a/src/app/documents/documents.move.component.html
+++ b/src/app/documents/documents.move.component.html
@@ -51,7 +51,7 @@
           </tr>
           <tr>
               <td>
-                <button class="btn waves-effect waves-light" (click)="openParentFolder()">
+                <button class="btn waves-effect waves-light" (click)="moveFiles()">
                   Move<i class="material-icons right">send</i>
                 </button>
               </td>
