--- a/src/app/expenses/expenses.component.html
+++ b/src/app/expenses/expenses.component.html
@@ -4,21 +4,21 @@
       <tr>
         <td>
           <div class="input-field col s4">
-            <md-input-container floatPlaceholder="never">
-              <input mdInput [mdAutocomplete]="reactiveAuto" [formControl]="stateCtrl" [(ngModel)]="searchParams.transactionType" formControlName="expenseType"
+            <mat-input-container floatPlaceholder="never">
+              <input matInput [matAutocomplete]="reactiveAuto" [formControl]="stateCtrl" [(ngModel)]="searchParams.transactionType" formControlName="expenseType"
               size="30" [class.invalid]="expenseTypeInvalid()" (blur)="expenseTypeTouched = true">
               <label for="expenseType"
                   [class.active]="searchParams.transactionType">
               Expense Type
             </label>
             <div *ngIf="expenseTypeInvalid()" style="color: red">Please select a value</div>
-            </md-input-container>
+            </mat-input-container>
 
-            <md-autocomplete #reactiveAuto="mdAutocomplete" [displayWith]="displayFn">
-              <md-option *ngFor="let state of filteredExpenseTypes | async" [value]="state">
+            <mat-autocomplete #reactiveAuto="matAutocomplete" [displayWith]="displayFn">
+              <mat-option *ngFor="let state of filteredExpenseTypes | async" [value]="state">
                 <span>{{ state.description }}</span>
-              </md-option>
-            </md-autocomplete>
+              </mat-option>
+            </mat-autocomplete>
           </div>
         </td>
       </tr>
@@ -59,11 +59,11 @@
       <tr>
         <td>
           <div class="input-field col s4">
-            <md-input-container>
-              <input mdInput [mdDatepicker]="startDatePicker" [(ngModel)]="searchParams.startDateString" formControlName="startDateString">
-              <button mdSuffix [mdDatepickerToggle]="startDatePicker"></button>
-            </md-input-container>
-            <md-datepicker #startDatePicker></md-datepicker>
+            <mat-input-container>
+              <input matInput [matDatepicker]="startDatePicker" [(ngModel)]="searchParams.startDateString" formControlName="startDateString">
+              <mat-datepicker-toggle matSuffix [for]="startDatePicker"></mat-datepicker-toggle>
+            </mat-input-container>
+            <mat-datepicker #startDatePicker></mat-datepicker>
 
             <label for="startDateString"
                   [class.active]="searchParams.startDateString"
@@ -72,11 +72,11 @@
             </label>
           </div>
           <div class="input-field col s4">
-            <md-input-container>
-              <input mdInput [mdDatepicker]="endDatePicker" [(ngModel)]="searchParams.endDateString" formControlName="endDateString">
-              <button mdSuffix [mdDatepickerToggle]="endDatePicker"></button>
-            </md-input-container>
-            <md-datepicker #endDatePicker></md-datepicker>
+            <mat-input-container>
+              <input matInput [matDatepicker]="endDatePicker" [(ngModel)]="searchParams.endDateString" formControlName="endDateString">
+              <mat-datepicker-toggle matSuffix [for]="endDatePicker"></mat-datepicker-toggle>              
+            </mat-input-container>
+            <mat-datepicker #endDatePicker></mat-datepicker>
 
             <label for="endDateString"
                   [class.active]="searchParams.endDateString">
