--- a/src/app/ref-data/ref-datas.component.html
+++ b/src/app/ref-data/ref-datas.component.html
@@ -8,11 +8,11 @@
       <tr>
         <td>
            <div class="input-field col s12">
-            <md-select placeholder="Type" [(ngModel)]="refData.type" formControlName="type" size="30">
-                <md-option *ngFor="let type of types" [value]="type.value">
+            <mat-select placeholder="Type" [(ngModel)]="refData.type" formControlName="type" size="30">
+                <mat-option *ngFor="let type of types" [value]="type.value">
                   {{ type.viewValue }}
-                </md-option>
-          </md-select>
+                </mat-option>
+          </mat-select>
           </div>
         </td>
       </tr>
