--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -20,6 +20,9 @@
       <li><a routerLink="/expenses/search" routerLinkActive="active">Search</a></li>
     </ul>
     <ul id="nav-mobile" class="right hide-on-med-and-down">
+        <li><span class="errMsg">{{getErrorMessage()}}&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span></li>
+      </ul>    
+    <ul id="nav-mobile" class="right hide-on-med-and-down">
       <li><span class="greeting">{{getUserGreeting()}}&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span></li>
     </ul>
   </div>
